--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button class="btn">Vastaus 3</button>
                 <button class="btn">Vastaus 4</button>
         </div>
-        <button id="next-button" >Seuraava</button>
+        <button id="next-btn" >Seuraava</button>
         </div>
     </div>
     <script src="script.js"></script>
